# CodeSynth

./: README.md
api/: .dockerignore  .env_sample  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  start.sh
api/alembic/: env.py
api/alembic/versions/: 0ae6ea9f17f3_projectorder_and_related_models.py  173f75ea2247_m2m_relationship_between_projectorder_.py  2023_11_07_2327-9d5f32c3e909_jwt_tokenks_blacklist.py  2023_11_08_2301-bc593d3ba969_project_and_project_tags.py  2023_11_09_1811-6b4f06e14a2a_project_preview_image.py  2023_11_11_2049-01b0dba759e4_project_filter_type.py  2023_11_17_0018-3fd234363d5a_project_tags_association_table_ondelete.py  2023_11_18_1337-1e28716a240f_project_tags_association.py  2023_11_22_1724-cee24e693e70_project_requests.py  2023_11_22_2211-fcf3bd8748e6_projectbudget_budget_field_changed_to_.py  2023_11_22_2326-ff996a790145_projectbudget_secondary_amount_field_.py  2023_11_23_0120-b9cbac8cf84e_projectbudget_fields_changes.py  2023_11_26_2021-f56abf5ad7a6_projectrequest_ref_source_id_changed_to_.py  2023_12_23_1854-587d88662ffb_auth_user_model.py  323a3a244275_customer_company_nullable_true.py  589f01169cec_user_and_blacklistedjwt_models.py  bf8fdb1b03db_botuser_model.py
api/nginx/: app.conf
api/nginx/templates/: app.conf.template
api/scripts/: admin_create.sh  run.sh
api/src/: main.py
api/src/admin/: auth.py  model_views.py  schemas.py  service.py
api/src/auth/: api.py  create_admin.py  models.py  schemas.py  services.py  validators.py
api/src/bot_user/: enums.py  models.py  router.py  schemas.py  service.py
api/src/core/: __init__.py  config.py  database.py  debug_helper.py  helpers.py  schemas.py  utils.py
api/supervisor/: supervisord.conf
(+196 files in other folders)
