[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Oleg Kuzmenko <olegkuzmenko2005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
python-dotenv = "^1.0.0"
alembic = "^1.12.1"
pydantic-settings = "^2.0.3"
asyncpg = "^0.29.0"
greenlet = "^3.0.1"
email-validator = "^2.1.0.post1"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
fastapi-pagination = "^0.12.12"
fastapi-cache2 = "^0.2.1"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
